<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.authorization.AuthFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginVertical="52dp"
        android:src="@drawable/road_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/auth_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="38dp"
        android:text="@string/auth_email"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/silver_background"
        android:hint="@string/auth_email_hint"
        android:padding="10dp"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:text="@string/auth_password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@drawable/silver_background"
        android:hint="@string/auth_password_hint"
        android:padding="10dp"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/accent_gray"
        app:cardCornerRadius="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="53dp"
            android:layout_marginVertical="10dp"
            android:text="@string/auth_sign_in"
            android:textColor="@color/white"
            android:textSize="21sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/accent_blue"
        app:cardCornerRadius="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="53dp"
            android:layout_marginVertical="10dp"
            android:text="@string/auth_register"
            android:textColor="@color/white"
            android:textSize="21sp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>