<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.registration.RegistrationFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginVertical="11dp"
        android:src="@drawable/road_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reg_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="44dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/reg_subtitle"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:background="@drawable/reg_selector_background"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_select_staging_profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Кузовной ремонт"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Юридическое"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Техническое"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Маркетинг"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Продажи"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Финансовое"
                        android:textSize="18sp" />

                    <com.businesscar.studentapp.presentation.registration.ShadowingRadioButton
                        style="@style/RadioButtonWithTextColorHighlight"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_marginTop="4dp"
                        android:text="Клиентская служба"
                        android:textSize="18sp" />

                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_full_name_hint"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_email_hint"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_phone_hint"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/universityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_university_name_hint"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/speciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_speciality_of_study_hint"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_course_hint"
                android:paddingHorizontal="10dp" />

            <com.businesscar.studentapp.presentation.SausageButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:paddingHorizontal="52dp"
                android:paddingVertical="10dp"
                android:text="@string/reg_next_stage"

                android:textColor="@color/white"
                android:textSize="21sp"
                app:cardBackgroundColor="@color/accent_blue" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>