<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginVertical="11dp"
            android:src="@drawable/road_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cabinet_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/silver_background"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:text="@string/cabinet_profile"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/silver_background"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:text="@string/cabinet_vacancies"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/silver_background"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:text="@string/cabinet_tests"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/silver_background"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:text="@string/cabinet_practice"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="normal" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/cabinet_background" />

</FrameLayout>